<resources>
    <string name="app_name">Redeem</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="gosokberhadiah">Recyleview</string>
    <string name="datadiri">Post Data</string>
    <string name="transaksi">Recyleview with paging</string>
    <string name="notifikasi">Sample OTP</string>
    <string name="keluar">Keluar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No Internet</string>
    <string name="network_failure">Network Failure</string>
    <string name="conversion_error">conversion_error</string>
    <string name="txtnotification">Notification</string>
</resources>